--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,4 +1,39 @@
 
+@article{wiuf_ancestry_1999,
+  title = {The {Ancestry} of a {Sample} of {Sequences} {Subject} to {Recombination}},
+  volume = {151},
+  issn = {1943-2631},
+  url = {https://doi.org/10.1093/genetics/151.3.1217},
+  doi = {10.1093/genetics/151.3.1217},
+  abstract = {In this article we discuss the ancestry of sequences sampled from the coalescent with recombination with constant population size 2N. We have studied a number of variables based on simulations of sample histories, and some analytical results are derived. Consider the leftmost nucleotide in the sequences. We show that the number of nucleotides sharing a most recent common ancestor (MRCA) with the leftmost nucleotide is ≈log(1 + 4N Lr)/4Nr when two sequences are compared, where L denotes sequence length in nucleotides, and r the recombination rate between any two neighboring nucleotides per generation. For larger samples, the number of nucleotides sharing MRCA with the leftmost nucleotide decreases and becomes almost independent of 4N Lr. Further, we show that a segment of the sequences sharing a MRCA consists in mean of 3/8Nr nucleotides, when two sequences are compared, and that this decreases toward 1/4Nr nucleotides when the whole population is sampled. A measure of the correlation between the genealogies of two nucleotides on two sequences is introduced. We show analytically that even when the nucleotides are separated by a large genetic distance, but share MRCA, the genealogies will show only little correlation. This is surprising, because the time until the two nucleotides shared MRCA is reciprocal to the genetic distance. Using simulations, the mean time until all positions in the sample have found a MRCA increases logarithmically with increasing sequence length and is considerably lower than a theoretically predicted upper bound. On the basis of simulations, it turns out that important properties of the coalescent with recombinations of the whole population are reflected in the properties of a sample of low size.},
+  number = {3},
+  urldate = {2023-08-15},
+  journal = {Genetics},
+  author = {Wiuf, Carsten and Hein, Jotun},
+  month = mar,
+  year = {1999},
+  pages = {1217--1228},
+  file = {Full Text PDF:/home/deren/Zotero/storage/LBU6HD4K/Wiuf and Hein - 1999 - The Ancestry of a Sample of Sequences Subject to R.pdf:application/pdf;Snapshot:/home/deren/Zotero/storage/2JGIZH7A/6034692.html:text/html},
+}
+
+
+@article{kuhner_maximum_2000,
+  title = {Maximum {Likelihood} {Estimation} of {Recombination} {Rates} {From} {Population} {Data}},
+  volume = {156},
+  issn = {1943-2631},
+  url = {https://doi.org/10.1093/genetics/156.3.1393},
+  doi = {10.1093/genetics/156.3.1393},
+  abstract = {We describe a method for co-estimating r = C/μ (where C is the per-site recombination rate and μ is the per-site neutral mutation rate) and Θ = 4Neμ (where Ne is the effective population size) from a population sample of molecular data. The technique is Metropolis-Hastings sampling: we explore a large number of possible reconstructions of the recombinant genealogy, weighting according to their posterior probability with regard to the data and working values of the parameters. Different relative rates of recombination at different locations can be accommodated if they are known from external evidence, but the algorithm cannot itself estimate rate differences. The estimates of Θ are accurate and apparently unbiased for a wide range of parameter values. However, when both Θ and r are relatively low, very long sequences are needed to estimate r accurately, and the estimates tend to be biased upward. We apply this method to data from the human lipoprotein lipase locus.},
+  number = {3},
+  urldate = {2023-08-15},
+  journal = {Genetics},
+  author = {Kuhner, Mary K and Yamato, Jon and Felsenstein, Joseph},
+  month = nov,
+  year = {2000},
+  pages = {1393--1401},
+  file = {Snapshot:/home/deren/Zotero/storage/ZUNKXKC7/6051663.html:text/html},
+}
+
 
 @article{y_c_brandt_evaluation_2022,
   title = {Evaluation of methods for estimating coalescence times using ancestral recombination graphs},
