--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -259,15 +259,36 @@
 }
 
 @article{degnan2006discordance,
-  title={Discordance of species trees with their most likely gene trees},
-  author={Degnan, James H and Rosenberg, Noah A},
-  journal={PLoS genetics},
-  volume={2},
-  number={5},
-  pages={e68},
-  year={2006},
-  publisher={Public Library of Science San Francisco, USA}
+    doi = {10.1371/journal.pgen.0020068},
+    author = {Degnan, James H AND Rosenberg, Noah A},
+    journal = {PLOS Genetics},
+    publisher = {Public Library of Science},
+    title = {Discordance of Species Trees with Their Most Likely Gene Trees},
+    year = {2006},
+    month = {05},
+    volume = {2},
+    url = {https://doi.org/10.1371/journal.pgen.0020068},
+    pages = {1-7},
+    abstract = {Because of the stochastic way in which lineages sort during speciation, gene trees may differ in topology from each other and from species trees. Surprisingly, assuming that genetic lineages follow a coalescent model of within-species evolution, we find that for any species tree topology with five or more species, there exist branch lengths for which gene tree discordance is so common that the most likely gene tree topology to evolve along the branches of a species tree differs from the species phylogeny. This counterintuitive result implies that in combining data on multiple loci, the straightforward procedure of using the most frequently observed gene tree topology as an estimate of the species tree topology can be asymptotically guaranteed to produce an incorrect estimate. We conclude with suggestions that can aid in overcoming this new obstacle to accurate genomic inference of species phylogenies.},
+    number = {5},
 }
+
+@article{degnan2005gene,
+    author = {Degnan, James H. and Salter, Laura A.},
+    title = {GENE TREE DISTRIBUTIONS UNDER THE COALESCENT PROCESS},
+    journal = {Evolution},
+    volume = {59},
+    number = {1},
+    pages = {24-37},
+    year = {2005},
+    month = {01},
+    abstract = {Under the coalescent model for population divergence, lineage sorting can cause considerable variability in gene trees generated from any given species tree. In this paper, we derive a method for computing the distribution of gene tree topologies given a bifurcating species tree for trees with an arbitrary number of taxa in the case that there is one gene sampled per species. Applications for gene tree distributions include determining exact probabilities of topological equivalence between gene trees and species trees and inferring species trees from multiple datasets. In addition, we examine the shapes of gene tree distributions and their sensitivity to changes in branch lengths, species tree shape, and tree size. The method for computing gene tree distributions is implemented in the computer program COAL.},
+    issn = {0014-3820},
+    doi = {10.1111/j.0014-3820.2005.tb00891.x},
+    url = {https://doi.org/10.1111/j.0014-3820.2005.tb00891.x},
+    eprint = {https://academic.oup.com/evolut/article-pdf/59/1/24/47652816/evolut0024.pdf},
+}
+
 
 @article{degnan2009gene,
   title={Gene tree discordance, phylogenetic inference and the multispecies coalescent},
